--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -360,7 +360,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X = data.drop('MEDV', axis=1)\n",
+    "y = data['MEDV']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -372,11 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "train_predictions = model.predict(X_train)\n",
+    "test_predictions = model.predict(X_test)"
    ]
   },
   {
@@ -388,11 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score for training :  0.7508856358979673\n",
+      "R2 score for testing :  0.6687594935356317\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import r2_score\n",
+    "print(\"R2 score for training : \", r2_score(y_train, train_predictions))\n",
+    "print(\"R2 score for testing : \", r2_score(y_test, test_predictions))"
    ]
   },
   {
@@ -404,11 +425,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error for training :  21.641412753226312\n",
+      "Mean absolute error for testing :  24.291119474973538\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "train_MSE = mean_squared_error(y_train, train_predictions)\n",
+    "test_MSE = mean_squared_error(y_test, test_predictions)\n",
+    "print(\"Mean absolute error for training : \", train_MSE)\n",
+    "print(\"Mean absolute error for testing : \", test_MSE)"
    ]
   },
   {
@@ -420,11 +455,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error for training :  3.3147716267832252\n",
+      "Mean absolute error for testing :  3.1890919658878416\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "train_MAE = mean_absolute_error(y_train, train_predictions)\n",
+    "test_MAE = mean_absolute_error(y_test, test_predictions)\n",
+    "print(\"Mean absolute error for training : \", train_MAE)\n",
+    "print(\"Mean absolute error for testing : \", test_MAE)"
    ]
   },
   {
@@ -436,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -500,26 +548,22 @@
       "type of iris plant.  One class is linearly separable from the other 2; the\n",
       "latter are NOT linearly separable from each other.\n",
       "\n",
-      "|details-start|\n",
-      "**References**\n",
-      "|details-split|\n",
+      ".. dropdown:: References\n",
       "\n",
-      "- Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "  Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "  Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "- Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "  (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "- Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "  Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "  Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "  Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "- Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "  on Information Theory, May 1972, 431-433.\n",
-      "- See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "  conceptual clustering system finds 3 classes in the data.\n",
-      "- Many, many more ...\n",
-      "\n",
-      "|details-end|\n",
+      "  - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
+      "    Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
+      "    Mathematical Statistics\" (John Wiley, NY, 1950).\n",
+      "  - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
+      "    (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
+      "  - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
+      "    Structure and Classification Rule for Recognition in Partially Exposed\n",
+      "    Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
+      "    Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
+      "  - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
+      "    on Information Theory, May 1972, 431-433.\n",
+      "  - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
+      "    conceptual clustering system finds 3 classes in the data.\n",
+      "  - Many, many more ...\n",
       "\n"
      ]
     }
@@ -530,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +722,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +751,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +771,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,11 +791,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df, target, test_size=0.2, random_state=42, stratify=target)"
    ]
   },
   {
@@ -763,11 +808,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "train_predictions = model.predict(X_train)\n",
+    "test_predictions = model.predict(X_test) "
    ]
   },
   {
@@ -779,11 +829,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy : 0.97\n",
+      "Test Accuracy : 0.97\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "train_accuracy = accuracy_score(y_train, train_predictions)\n",
+    "test_accuracy = accuracy_score(y_test, test_predictions)\n",
+    "print(\"Train Accuracy : %.2f\" %train_accuracy)\n",
+    "print(\"Test Accuracy : %.2f\" %test_accuracy)"
    ]
   },
   {
@@ -795,11 +859,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy : 0.97\n",
+      "Test Accuracy : 0.97\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "train_balanced = balanced_accuracy_score(y_train, train_predictions)\n",
+    "test_balanced = balanced_accuracy_score(y_test, test_predictions)\n",
+    "print(\"Train Accuracy : %.2f\" %train_balanced)\n",
+    "print(\"Test Accuracy : %.2f\" %test_balanced)"
    ]
   },
   {
@@ -811,11 +889,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy : 0.97\n",
+      "Test Accuracy : 0.97\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "train_precision = precision_score(y_train, train_predictions, average='micro')\n",
+    "test_precision = precision_score(y_test, test_predictions, average='micro')\n",
+    "print(\"Train Accuracy : %.2f\" %train_precision)\n",
+    "print(\"Test Accuracy : %.2f\" %test_precision)"
    ]
   },
   {
@@ -827,11 +919,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy : 0.97\n",
+      "Test Accuracy : 0.97\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "train_recall = recall_score(y_train, train_predictions, average='micro')\n",
+    "test_recall = recall_score(y_test, test_predictions, average='micro')\n",
+    "print(\"Train Accuracy : %.2f\" %train_recall)\n",
+    "print(\"Test Accuracy : %.2f\" %test_recall)"
    ]
   },
   {
@@ -843,11 +948,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy : 0.97\n",
+      "Test Accuracy : 0.97\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "train_f1score = f1_score(y_train, train_predictions, average='micro')\n",
+    "test_f1score = f1_score(y_test, test_predictions, average='micro')\n",
+    "print(\"Train Accuracy : %.2f\" %train_f1score)\n",
+    "print(\"Test Accuracy : %.2f\" %test_f1score)"
    ]
   },
   {
@@ -859,11 +977,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Confusion Matrix : \n",
+      " [[40  0  0]\n",
+      " [ 0 38  2]\n",
+      " [ 0  1 39]]\n",
+      "Test Confusion Matrix : \n",
+      " [[10  0  0]\n",
+      " [ 0  9  1]\n",
+      " [ 0  0 10]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "train_confusion_matrix = confusion_matrix(y_train, train_predictions)\n",
+    "test_confusion_matrix = confusion_matrix(y_test, test_predictions)\n",
+    "print(\"Train Confusion Matrix : \\n\", train_confusion_matrix)\n",
+    "print(\"Test Confusion Matrix : \\n\", test_confusion_matrix)"
    ]
   },
   {
@@ -885,7 +1023,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
